--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,19 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Para ocupar toda a altura da viewport */
 }
 
 .container {
-    max-width: 1000px;
-    margin: 50px auto;
+    max-width: 600px; /* Ajuste conforme necessário */
     padding: 20px;
     text-align: center;
+    background-color: #333; /* Cor de fundo do container */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra do container */
 }
 
 h1 {
@@ -45,75 +51,9 @@ button {
     border-radius: 4px;
     font-size: 1em;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 button:hover {
-    background-color: #f40612;
-}
-
-.options {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin-top: 20px;
-}
-
-.option {
-    cursor: pointer;
-    margin: 10px;
-    padding: 10px;
-    background-color: #333;
-    border-radius: 10px;
-    transition: transform 0.3s;
-}
-
-.option img {
-    max-width: 150px;
-    height: auto;
-    border-radius: 10px;
-}
-
-.option p {
-    margin: 10px 0 0;
-    font-size: 1.2em;
-}
-
-.option:hover {
-    transform: scale(1.1);
-}
-
-#content-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-#content-list div {
-    margin: 10px;
-    padding: 10px;
-    background-color: #333;
-    border-radius: 10px;
-    width: 200px;
-    text-align: center;
-    transition: transform 0.3s;
-}
-
-#content-list div:hover {
-    transform: scale(1.1);
-}
-
-#back-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #e50914;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    font-size: 1em;
-    cursor: pointer;
-}
-
-#back-button:hover {
     background-color: #f40612;
 }
